--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,11 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property='og:title' content='LFG' />
+    <meta property='og:description' content='LFG or Looking for Game is a React app that allows users to connect and find multiplayer games to play together'/>
     <meta property='og:image' content='https://i.imgur.com/0IYV0IB.png'/>
+    <meta property='og:url' content='https://lfg-beta.netlify.app/'/>
+
     <meta
       name="description"
       content="LFG or Looking for Game is a React app that allows users to connect and find multiplayer games to play together"
