updates meta data

--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,10 @@
     <meta property='og:description' content="LFG or Looking for Game is a React app that allows users to connect and find multiplayer games to play together"/>
     <meta property='og:url' content="https://lfg-beta.netlify.app/"/>
 
-    <meta
+    <!-- <meta
       name="description"
       content="LFG or Looking for Game is a React app that allows users to connect and find multiplayer games to play together"
-    />
+    /> -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
